[package]
edition = "2018"
name = "rs-phash"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
# image = "0.23"
image = { path = "../../image" }
rustdct = "0.6"
structopt = "0.3.25"
transpose = "0.2"
num-traits = "0.2.14"
hex = "0.4"
